[package]
name = "rasorite"
version = "0.1.0"
edition = "2021"
description = "A command line tool to parse and plot Roblox analytics data."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
plotters = "0.3.6"
reqwest = { version = "0.12.4", features = ["json"] }
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
thiserror = "1.0.61"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
rbx_cookie = "0.1.4"
regex = "1.10.4"
once_cell = "1.19.0"
plotters-svg = "0.3.6"
fixed = { version = "1.27.0", features = ["serde"] }
derive_more = "0.99.17"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
clap-verbosity-flag = "2.2.0"
pretty_env_logger = "0.5.0"
opener = "0.7.1"
